=================== Release 1.0 2017-04-15 =====================
Description
    * First version of the App.
Functionalities
    * 
Changes
    * Version 1.0 Build 01 (2017/04/15)
        * Corrected bug in SR computation. (2017/04/07)
        * Added support for custom table sliding menues. (2017/04/07)
        * Correction to the OSR computation and statistics. (2017/04/06)
        * Added support for GMT offsets wherever there is a date in the DB. (2017/04/06)
        * Mayor modifications to the way overlays are handled. Now they are added to the superview only when shown. And some other minor modifications. (2017/04/05)
        * Removed support to copy/duplicate tasks marked as NOT DONE to next day. (2017/04/05)
        * Added support to copy/duplicate tasks marked as NOT DONE to next day, but with the state of PENDING. (2017/04/05)
        * Corrected bug where tasks were not being migrated if added from the bucket list. (2017/04/04)
        * Added support for a spinner in controllers. (2017/04/04)
        * Corrected bug where notifications were not being re-scheduled when modifying times. Also corrected a minor bug with the computation of SR. (2017/04/04)
        * Added support to change a project's name. (2017/04/03)
        * Corrected bug where tasks were not migrated if added without doing previous sanity checks. (2017/04/03)
        * Added support for modifying the username. (2017/04/03)
        * Added support for modifying project's times. (2017/04/03)
        * Added support for BSB in backups. (2017/04/03)
        * Added support for Swift 3.1 and Xcode 8.3. (2017/04/03)
        * Corrected another bug in the BrainstormingBucket function. (2017/04/01)
        * Corrected minor bug with the BrainstormingBucket function and added missing support to delete the bucket entry after migration. (2017/04/01)
        * Added final support for the BrainstormingBucket function. (2017/04/01)