@@ -97,9 +97,11 @@ class AKMasterReference: NSObject
                 data.appendFormat("=>           COMPLETION PERCENTAGE: %.2f\n", taskInQueue.completionPercentage)
                 data.appendFormat("=>           INITIAL COMPLETION PERCENTAGE: %.2f\n", taskInQueue.initialCompletionPercentage)
                 data.appendFormat("=>           CREATION DATE: %@\n", taskInQueue.creationDate?.description ?? "")
+                data.appendFormat("=>           MIGRATED: %@\n", taskInQueue.migrated ? "YES" : "NO")
                 data.appendFormat("=>           NAME: %@\n", taskInQueue.name ?? "")
                 data.appendFormat("=>           NOTE: %@\n", taskInQueue.note ?? "")
                 data.appendFormat("=>           STATE: %@\n", taskInQueue.state ?? "")
+                data.appendFormat("=>           TOTAL COMPLETION: %.2f\n", taskInQueue.totalCompletion)
                 data.appendFormat("=>           ------\n")
             }
             data.appendFormat("=>       DILATE QUEUE: (%i)\n", DataInterface.countDilateTasks(project: project))
@@ -107,9 +109,11 @@ class AKMasterReference: NSObject
                 data.appendFormat("=>           COMPLETION PERCENTAGE: %.2f\n", taskInQueue.completionPercentage)
                 data.appendFormat("=>           INITIAL COMPLETION PERCENTAGE: %.2f\n", taskInQueue.initialCompletionPercentage)
                 data.appendFormat("=>           CREATION DATE: %@\n", taskInQueue.creationDate?.description ?? "")
+                data.appendFormat("=>           MIGRATED: %@\n", taskInQueue.migrated ? "YES" : "NO")
                 data.appendFormat("=>           NAME: %@\n", taskInQueue.name ?? "")
                 data.appendFormat("=>           NOTE: %@\n", taskInQueue.note ?? "")
                 data.appendFormat("=>           STATE: %@\n", taskInQueue.state ?? "")
+                data.appendFormat("=>           TOTAL COMPLETION: %.2f\n", taskInQueue.totalCompletion)
                 data.appendFormat("=>           ------\n")
             }
             data.appendFormat("=>       BUCKET: (%i)\n", DataInterface.countBucketEntries(project: project, forDate: ""))
@@ -135,6 +139,7 @@ class AKMasterReference: NSObject
                         data.appendFormat("=>                   COMPLETION PERCENTAGE: %.2f\n", task.completionPercentage)
                         data.appendFormat("=>                   INITIAL COMPLETION PERCENTAGE: %.2f\n", task.initialCompletionPercentage)
                         data.appendFormat("=>                   CREATION DATE: %@\n", task.creationDate?.description ?? "")
+                        data.appendFormat("=>                   MIGRATED: %@\n", task.migrated ? "YES" : "NO")
                         data.appendFormat("=>                   NAME: %@\n", task.name ?? "")
                         data.appendFormat("=>                   NOTE: %@\n", task.note ?? "")
                         data.appendFormat("=>                   STATE: %@\n", task.state ?? "")
